@@ -13,6 +13,7 @@ xine-lib (1-rc4a)
   * make it possible for the CDDA plugin to give away Musicbrainz CD Index ID
   * several DVB improvements. add dvbs://, dvbc:// and dvbt:// mrls
   * fix static noise produced by WMA streams in some systems
+  * add support for ejecting removable media on Solaris
 
 xine-lib (1-rc4)
   * experimental DTS software decoder using libdts
